samples/_failures_safe/1761692452_3b1f8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a92a0cca.c: In function ‘main’:
./samples/SAFE/__tmp_a92a0cca.c:140:16: error: missing terminating " character
  140 |         printf("\nDeterminant: %d\n
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a92a0cca.c:140:9: error: expected expression at end of input
  140 |         printf("\nDeterminant: %d\n
      |         ^~~~~~
./samples/SAFE/__tmp_a92a0cca.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a92a0cca.c:140:9: error: expected declaration or statement at end of input
